tests/compile_fail/add/unknow_struct_attribute.rs
#[derive(derive_more::Add)]
#[add(unknown)]
struct Foo(i32);

fn main() {}
