tests/compile_fail/add/unknow_struct_attribute.stderr
error: only `skip`/`ignore` allowed here
 --> tests/compile_fail/add/unknow_struct_attribute.rs:2:7
  |
2 | #[add(unknown)]
  |       ^^^^^^^
